Email updates for followed question, tags, users. Auto-follow of question you answered.

--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -8757,7 +8757,7 @@ input.submit,button,input[type="submit"],input[type="button"],input[type="file"]
 	padding: 6px;
 }
 
-#form_error li,.form_error li,.f_err li {
+#form_error li,.form_error li,.f_err {
 	color: red;
 	font-size: 120%;
 }
