--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -768,17 +768,17 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   10);
+		                                                       10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   0);
+		                                                       0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1327,9 +1327,9 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   25);
+		                                                       25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1720,11 +1720,12 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                             
+	filter: progid :                                 
 		                                                        
 		                           
 		                           
-		                DXImageTransform.Microsoft.AlphaImageLoader (    
+		                    DXImageTransform.Microsoft.AlphaImageLoader ( 
+		      
 		              
 		 
 		   
@@ -1737,7 +1738,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		         src =            
+		             src =                
 		
 		 
 		   
@@ -1748,8 +1749,8 @@ p#clear {
 		                      
 		                      
 		                      
-		          '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =    
+		              '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =        
 		 
 		   
 		                
@@ -1762,7 +1763,7 @@ p#clear {
 		 
 		   
 		                                                               
-		               'scale' );
+		                   'scale' );
 }
 
 .yui-picker-mask {
@@ -1937,9 +1938,9 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   25);
+		                                                       25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2044,9 +2045,9 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   12);
+		                                                       12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2151,9 +2152,9 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   12);
+		                                                       12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2215,9 +2216,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   0);
+		                                                       0);
 }
 
 .yui-dt-resizerproxy {
@@ -2226,9 +2227,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   0);
+		                                                       0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2324,9 +2325,9 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   25);
+		                                                       25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2713,17 +2714,17 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2821,9 +2822,9 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-editor-container iframe {
@@ -3924,9 +3925,9 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4693,9 +4694,9 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   12);
+		                                                       12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5206,16 +5207,16 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   0);
+		                                                       0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5303,9 +5304,9 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                                
+	filter: alpha(opacity =                                                    
 		                                                         
-		                                                    100);
+		                                                        100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5561,17 +5562,17 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5669,9 +5670,9 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                 
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                   50);
+		                                                       50);
 }
 
 .yui-editor-container iframe {
@@ -7725,10 +7726,10 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                   
+	filter: progid :                       
 		                                                        
 		                                   
-		                  DXImageTransform.Microsoft.gradient (  
+		                      DXImageTransform.Microsoft.gradient (      
 		                  
 		
 		 
@@ -7736,18 +7737,20 @@ a#asignup {
 		        
 		                 
 		                                                         
-		     startColorstr =        
+		         startColorstr =            
 		 
 		   
 		      
 		              
 		                            
-		                                        "#0000FF", endColorstr =      
+		                                            "#0000FF", endColorstr =
+		  
+		      
 		            
 		                          
 		 
 		      
-		                                                  "#19558D" );
+		                                                      "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -7835,6 +7838,8 @@ h3 {
 	border-bottom-right-radius: 6px 6px;
 	border-top-left-radius: 6px 6px;
 	border-top-right-radius: 6px 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
 	height: 100%;
 	margin-left: auto;
 	margin-right: auto;
@@ -7848,6 +7853,8 @@ h3 {
 	margin-bottom: 10px;
 	margin-top: 10px;
 	width: 100%;
+	min-height: 23px;
+	height: 23px;
 }
 
 .icn {
@@ -7913,12 +7920,12 @@ h3 {
 	background-position: -598px -120px;
 }
 
-.editalbums {
-	background-position: -418px -242px;
+.emailprefs {
+	background-position: -418px -150px;
 }
 
-.changepass {
-	background-position: -418px -57px;
+.editalbums {
+	background-position: -418px -242px;
 }
 
 .w40 {
@@ -8315,10 +8322,10 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :      
+	filter: progid :          
 		                                                        
 		                                   
-		     DXImageTransform.Microsoft.gradient (        
+		         DXImageTransform.Microsoft.gradient (            
 		
 		 
 		    
@@ -8326,18 +8333,19 @@ li.tsearch {
 		                 
 		  
 		       
-		                                                  startColorstr = 
+		                                                      startColorstr = 
+		   
 		      
 		              
 		                            
-		                                                    "#A7BBCC",
-		endColorstr =      
+		                                                        "#A7BBCC",
+		endColorstr =          
 		 
 		   
 		       
 		              
 		                             
-		                                       "#879BAD" );
+		                                           "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9358,10 +9366,10 @@ td.avatar img.iconfb,td.avatar img.icontw {
 	color: #FFFFFF;
 }
 
-#form_error {
+#form_error,.form_error {
 	clear: both;
 	padding: 6px;
-	font-size: 1em;
+	font-size: 120%;
 	font-weight: bold;
 	color: red;
 	margin-top: 5px;
@@ -9645,7 +9653,7 @@ a.commentor1 {
 }
 
 a.commentor1:hover,#usrtags span:hover {
-	border-bottom: 0 !important;
+	border-bottom: 1px solid #19558D !important;
 }
 
 div.com_like {
@@ -9824,4 +9832,20 @@ div.followed_tag {
 	clear: both;
 	margin-left: 22px;
 	color: #444;
+}
+
+div.tool div {
+	position: relative;
+	float: left;
+	padding-top: 3px;
+}
+
+div.tool_link {
+	min-height: 23px;
+	height: 23px;
+	margin-left: 6px;
+}
+
+div.tool_link a {
+	vertical-align: middle !important;
 }
