Added Read/Unread status feature

--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -768,17 +768,19 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           10);
+		                                                         
+		                                                              10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           0);
+		                                                         
+		                                                              0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1327,9 +1329,10 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           25);
+		                                                         
+		                                                              25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1720,11 +1723,13 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                     
+	filter: progid :                                        
 		                                                        
 		                           
 		                           
-		                        DXImageTransform.Microsoft.AlphaImageLoader ( 
+		                           DXImageTransform.Microsoft.AlphaImageLoader
+		(  
+		 
 		   
 		      
 		              
@@ -1739,7 +1744,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                 src =                    
+		                    src =                       
 		
 		 
 		   
@@ -1750,8 +1755,8 @@ p#clear {
 		                      
 		                      
 		                      
-		                  '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =            
+		                     '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =               
 		 
 		   
 		                
@@ -1764,7 +1769,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                       'scale' );
+		                          'scale' );
 }
 
 .yui-picker-mask {
@@ -1939,9 +1944,10 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           25);
+		                                                         
+		                                                              25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2046,9 +2052,10 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           12);
+		                                                         
+		                                                              12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2153,9 +2160,10 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           12);
+		                                                         
+		                                                              12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2217,9 +2225,10 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           0);
+		                                                         
+		                                                              0);
 }
 
 .yui-dt-resizerproxy {
@@ -2228,9 +2237,10 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           0);
+		                                                         
+		                                                              0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2326,9 +2336,10 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           25);
+		                                                         
+		                                                              25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2715,17 +2726,19 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2823,9 +2836,10 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-editor-container iframe {
@@ -3926,9 +3940,10 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4695,9 +4710,10 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           12);
+		                                                         
+		                                                              12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5208,16 +5224,18 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           0);
+		                                                         
+		                                                              0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5305,9 +5323,10 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                                        
+	filter: alpha(opacity = 
 		                                                         
-		                                                            100);
+		                                                         
+		                                                               100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5563,17 +5582,19 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5671,9 +5692,10 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                         
+	filter: alpha(opacity =  
 		                                                         
-		                                                           50);
+		                                                         
+		                                                              50);
 }
 
 .yui-editor-container iframe {
@@ -7727,10 +7749,10 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                           
+	filter: progid :                              
 		                                                        
 		                                   
-		                          DXImageTransform.Microsoft.gradient ( 
+		                             DXImageTransform.Microsoft.gradient (    
 		        
 		                  
 		
@@ -7739,14 +7761,14 @@ a#asignup {
 		        
 		                 
 		                                                         
-		             startColorstr =                
+		                startColorstr =                   
 		 
 		   
 		      
 		              
 		                            
-		                                                "#0000FF", endColorstr
-		=  
+		                                                   "#0000FF",
+		endColorstr =     
 		 
 		  
 		      
@@ -7754,7 +7776,8 @@ a#asignup {
 		                          
 		 
 		      
-		                                                          "#19558D" );
+		                                                             "#19558D"
+		);
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8034,6 +8057,21 @@ h3 {
 	position: relative;
 	float: left;
 	width: 600px;
+}
+
+div.smmry a {
+	font-size: 110%;
+	font-weight: bold;
+}
+
+a.read {
+	font-size: 100% !important;
+	font-weight: 400 !important;
+}
+
+div.tgs a {
+	font-size: 100% !important;
+	font-weight: 400;
 }
 
 .vts {
@@ -8328,10 +8366,11 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :              
+	filter: progid :                 
 		                                                        
 		                                   
-		             DXImageTransform.Microsoft.gradient (                
+		                DXImageTransform.Microsoft.gradient (
+		                  
 		
 		 
 		    
@@ -8340,20 +8379,20 @@ li.tsearch {
 		  
 		       
 		                                                         
-		startColorstr =   
+		   startColorstr =      
 		 
 		   
 		      
 		              
 		                            
-		                                                            "#A7BBCC",
-		endColorstr =              
+		                                                             
+		 "#A7BBCC", endColorstr =                 
 		 
 		   
 		       
 		              
 		                             
-		                                               "#879BAD" );
+		                                                  "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8564,6 +8603,14 @@ span.comment {
 
 span.person {
 	background-position: -144px -96px;
+}
+
+span.unread {
+	background-position: -96px -96px;
+}
+
+span.read {
+	background-position: -80px -96px;
 }
 
 /**
@@ -9889,7 +9936,7 @@ div.u4 {
 	padding-left: 4px;
 }
 
-div.u4 span { 
+div.u4 span {
 	color: #666;
 	padding: 2px;
 }
@@ -9897,7 +9944,8 @@ div.u4 span {
 div.i_rep {
 	z-index: 999;
 	background-color: #EDEDED;
-	border: 1px solid green; padding : 5px;
+	border: 1px solid green;
+	padding: 5px;
 	font-weight: bold;
 	padding: 3px;
 }
